remove backface-visibility solve sticky unstable problem

--- a/sass/starter/_off-canvas.scss
+++ b/sass/starter/_off-canvas.scss
@@ -26,7 +26,7 @@ $off-canvas-main-bg-color: white;
     right: 0;
     background-color: $off-canvas-main-bg-color;
     @include transition(transform .3s ease-out, max-width .5s);
-    @include backface-visibility(hidden); // 解決 translate 在最後結束時會閃爍的 bug
+    // @include backface-visibility(hidden); // 解決 translate 在最後結束時會閃爍的 bug
   }
 
   .off-canvas-mask {
